# computa-env

./: LICENSE  README.md  pyproject.toml
ComputaEnv/: __init__.py
ComputaEnv/environments/: __init__.py  base.py  stdio_env.py  vnc_gui_env.py
ComputaEnv/environments/local_gui_env/: __init__.py  display.py  local_gui_env.py  soundtrack.py
ComputaEnv/peripherals/: __init__.py  display.py  eye.py  mouse.py  soundtrack.py  terminal_display.py
ComputaEnv/peripherals/keyboard/: __init__.py  constants.py  keyboard.py
ComputaEnv/utils/: ocr.py
ComputerEnv/: __init__.py
ComputerEnv/environments/: base.py  stdio_env.py  vnc_gui_env.py
ComputerEnv/environments/local_gui_env/: __init__.py  display.py  local_gui_env.py  soundtrack.py
ComputerEnv/peripherals/: __init__.py  base.py  display.py  eye.py  mouse.py  soundtrack.py  terminal_display.py
ComputerEnv/peripherals/keyboard/: __init__.py  constants.py  keyboard.py
ComputerEnvs/: __init__.py
ComputerEnvs/environments/: __init__.py  base.py  stdio_env.py  vnc_gui_env.py
ComputerEnvs/environments/local_gui_env/: __init__.py  display.py  local_gui_env.py  soundtrack.py
ComputerEnvs/peripherals/: __init__.py  base.py  display.py  eye.py  mouse.py  soundtrack.py  terminal_display.py
ComputerEnvs/peripherals/keyboard/: __init__.py  keyboard.py
ComputerEnvs/utils/: find_next_available_port.py
